--- a/wzz-parent/wzz-core/pom.xml
+++ b/wzz-parent/wzz-core/pom.xml
@@ -71,7 +71,6 @@
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-context-support</artifactId>
-				<version>${spring.version}</version>
 			</dependency>
 
 			<dependency>
@@ -113,6 +112,10 @@
 			<dependency>
 				<groupId>log4j</groupId>
 				<artifactId>log4j</artifactId>
+			</dependency>
+			<dependency>
+				<groupId>org.hibernate</groupId>
+				<artifactId>hibernate-validator</artifactId>
 			</dependency>
 
 
