--- a/wzz-parent/wzz-gw/src/main/resources/log4j.properties
+++ b/wzz-parent/wzz-gw/src/main/resources/log4j.properties
@@ -1,22 +1,36 @@
-#定义LOG输出级别  
-log4j.rootLogger=DEBUG,Console,File  
-#定义日志输出目的地为控制台  
-log4j.appender.Console=org.apache.log4j.ConsoleAppender  
-log4j.appender.Console.Target=System.out  
-#可以灵活地指定日志输出格式，下面一行是指定具体的格式  
-log4j.appender.Console.layout = org.apache.log4j.PatternLayout  
-log4j.appender.Console.layout.ConversionPattern=[%c] - %m%n  
-  
-#文件大小到达指定尺寸的时候产生一个新的文件  
-log4j.appender.File = org.apache.log4j.RollingFileAppender  
-#指定输出目录  
-log4j.appender.File.File = logs/wzz.log  
-#定义文件最大大小  
-log4j.appender.File.MaxFileSize = 10MB  
-# 输出所以日志，如果换成DEBUG表示输出DEBUG以上级别日志  
-log4j.appender.File.Threshold = ALL  
-log4j.appender.File.layout = org.apache.log4j.PatternLayout  
-log4j.appender.File.layout.ConversionPattern =[%p] [%d{yyyy-MM-dd HH\:mm\:ss}][%c]%m%n
-log4j.logger.java.sql.Connection=DEBUG  
-log4j.logger.java.sql.Statement=DEBUG  
-log4j.logger.java.sql.PreparedStatement=DEBUG   
+# For JBoss: Avoid to setup Log4J outside $JBOSS_HOME/server/default/deploy/log4j.xml!
+# For all other servers: Comment out the Log4J listener in web.xml to activate Log4J.
+log4j.rootLogger=DEBUG, stdout, daily_rolling_log_file, size_rolling_file
+
+log4j.logger.org.apache=DEBUG
+log4j.logger.freemarker=DEBUG
+log4j.logger.org.logicalcobwebs=DEBUG
+log4j.logger.com.opensymphony=DEBUG
+log4j.logger.org.springframework=DEBUG
+log4j.logger.org.mybatis=DEBUG
+log4j.logger.org.quartz=DEBUG
+log4j.logger.java.sql=debug
+log4j.logger.com.mchange.v2.c3p0=DEBUG
+
+# console configuration
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern=[%d{yyyy-MM-dd HH:mm:ss}] [%p] [%C] [%L] - %m%n
+
+# Daily File Configuration
+log4j.appender.daily_rolling_log_file=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.daily_rolling_log_file.Threshold=DEBUG
+log4j.appender.daily_rolling_log_file.File=${apidoc.root}/../logs/apidoc/daily/apidoc.log
+log4j.appender.daily_rolling_log_file.DatePattern = '.'yyyy-MM-dd
+log4j.appender.daily_rolling_log_file.layout=org.apache.log4j.PatternLayout
+log4j.appender.daily_rolling_log_file.layout.ConversionPattern=[%d{yyyy-MM-dd HH:mm:ss}] [%t] [%p] [%C] [%L] - %m%n
+
+# Rolling File Configuration
+log4j.appender.size_rolling_file=org.apache.log4j.RollingFileAppender
+log4j.appender.size_rolling_file.Threshold=DEBUG
+log4j.appender.size_rolling_file.File=${apidoc.root}/../logs/apidoc/rolling/apidoc.log
+log4j.appender.size_rolling_file.Append=true
+log4j.appender.size_rolling_file.MaxFileSize=10000KB 
+log4j.appender.size_rolling_file.MaxBackupIndex=10
+log4j.appender.size_rolling_file.layout=org.apache.log4j.PatternLayout 
+log4j.appender.size_rolling_file.layout.ConversionPattern=[%d{yyyy-MM-dd HH:mm:ss}] [%t] [%p] [%C] [%L] - %m%n
