用户和wifi店铺接口

--- a/wzz-parent/wzz-gw/pom.xml
+++ b/wzz-parent/wzz-gw/pom.xml
@@ -24,6 +24,6 @@
     </dependency>
   </dependencies>
   <build>
-    <finalName>wzz-gw</finalName>
+    <finalName>gateway</finalName>
   </build>
 </project>
