文件上传接口

--- a/wzz-parent/wzz-gw/src/main/resources/jdbc.properties
+++ b/wzz-parent/wzz-gw/src/main/resources/jdbc.properties
@@ -10,3 +10,8 @@ maxActive=20
 minIdle=3
 #定义最长等待时间  
 maxWait=60000  
+
+wzz.ftp.url=www.wangzhizhu.com
+wzz.ftp.userName=www
+wzz.ftp.password=a85e0d3e6
+wzz.ftp.tmpfile.path=/ftpdir/
