v1版本接口开发

--- a/wzz-parent/wzz-gw/src/main/resources/jdbc.properties
+++ b/wzz-parent/wzz-gw/src/main/resources/jdbc.properties
@@ -15,3 +15,5 @@ wzz.ftp.url=www.wangzhizhu.com
 wzz.ftp.userName=www
 wzz.ftp.password=a85e0d3e6
 wzz.ftp.tmpfile.path=/ftpdir/
+#附近的wifi店铺搜索范围
+wzz.wifi.search.scope=500
