--- a/wzz-parent/wzz-gw/src/main/resources/jdbc.properties
+++ b/wzz-parent/wzz-gw/src/main/resources/jdbc.properties
@@ -18,11 +18,11 @@ wzz.ftp.tmpfile.path=/ftpdir/
 #附近的wifi店铺搜索范围
 wzz.wifi.search.scope=500
 
-SMSServerHost=sandboxapp.cloopen.com
-#SMSServerHost=app.cloopen.com
+#SMSServerHost=sandboxapp.cloopen.com
+SMSServerHost=app.cloopen.com
 SMSServerPort=8883
 SMSServerUserName=aaf98f894ff9138601500f10ce710fd4
 SMSServerPassword=f04e4933f5f74242b5881868855b2aaa
-SMSServerAppId=8a48b5514ff923b401500f1109262e35
+SMSServerAppId=8a48b5514ff923b401500f13dee32e3d
 SMSServerTempleteId=1
 SMSServerTimeout=5
