--- a/wzz-parent/wzz-gw/src/main/resources/jdbc.properties
+++ b/wzz-parent/wzz-gw/src/main/resources/jdbc.properties
@@ -3,11 +3,11 @@ url=jdbc:mysql://120.25.226.197:3306/wzz?useUnicode=true&characterEncoding=utf-8
 username=root  
 password=wzzmysql  
 #定义初始连接数  
-initialSize=3 
+initialSize=1
 #定义最大连接数  
 maxActive=20  
 #定义最小空闲  
-minIdle=3
+minIdle=1
 #定义最长等待时间  
 maxWait=60000  
 
@@ -19,10 +19,10 @@ wzz.ftp.tmpfile.path=/ftpdir/
 wzz.wifi.search.scope=500
 
 #SMSServerHost=sandboxapp.cloopen.com
-SMSServerHost=app.cloopen.com
-SMSServerPort=8883
-SMSServerUserName=aaf98f894ff9138601500f10ce710fd4
-SMSServerPassword=f04e4933f5f74242b5881868855b2aaa
-SMSServerAppId=8a48b5514ff923b401500f13dee32e3d
-SMSServerTempleteId=1
+SMSServerHost=http://api.sms.cn/mt/
+#SMSServerPort=8883
+SMSServerUserName=nanhaiqiangwang
+SMSServerPassword=44ba4553c070c7e8198540f6e2ede0d9
+#SMSServerAppId=8a48b5514ff923b401500f13dee32e3d
+#SMSServerTempleteId=1
 SMSServerTimeout=5
