--- a/wzz-parent/wzz-gw/src/main/resources/jdbc.properties
+++ b/wzz-parent/wzz-gw/src/main/resources/jdbc.properties
@@ -1,5 +1,5 @@
 driverClassName=com.mysql.jdbc.Driver  
-url=jdbc:mysql://120.25.226.197:3306/wzz?useUnicode=true&characterEncoding=utf-8
+url=jdbc:mysql://localhost:3306/wzz?useUnicode=true&characterEncoding=utf-8
 username=root  
 password=wzzmysql  
 #定义初始连接数  
