--- a/wzz-parent/wzz-gw/src/main/resources/jdbc.properties
+++ b/wzz-parent/wzz-gw/src/main/resources/jdbc.properties
@@ -1,7 +1,10 @@
 driverClassName=com.mysql.jdbc.Driver  
-url=jdbc:mysql://localhost:3306/wzz?useUnicode=true&characterEncoding=utf-8
-username=root  
-password=wzzmysql  
+#url=jdbc:mysql://120.25.226.197:3306/wzz?useUnicode=true&characterEncoding=utf-8
+#username=root  
+#password=wzzmysql  
+url=jdbc:mysql://rds25s66d354i0w8fr56.mysql.rds.aliyuncs.com:3306/wzz?useUnicode=true&characterEncoding=utf-8
+username=wzz
+password=wzzmysql2016
 #定义初始连接数  
 initialSize=1
 #定义最大连接数  
