--- a/wzz-parent/wzz-gw/src/main/resources/jdbc.properties
+++ b/wzz-parent/wzz-gw/src/main/resources/jdbc.properties
@@ -2,6 +2,9 @@ driverClassName=com.mysql.jdbc.Driver
 url=jdbc:mysql://rds25s66d354i0w8fr56.mysql.rds.aliyuncs.com:3306/wzz?useUnicode=true&characterEncoding=utf-8
 username=wzz
 password=wzzmysql2016
+#url=jdbc:mysql://localhost:3306/wzz?useUnicode=true&characterEncoding=utf-8
+#username=root
+#password=mysql
 #定义初始连接数  
 initialSize=1
 #定义最大连接数  
