--- a/wzz-parent/wzz-gw/src/main/resources/log4j.properties
+++ b/wzz-parent/wzz-gw/src/main/resources/log4j.properties
@@ -1,17 +1,17 @@
 # For JBoss: Avoid to setup Log4J outside $JBOSS_HOME/server/default/deploy/log4j.xml!
 # For all other servers: Comment out the Log4J listener in web.xml to activate Log4J.
-log4j.rootLogger=DEBUG, stdout, daily_rolling_log_file, size_rolling_file
+log4j.rootLogger=INFO, stdout, daily_rolling_log_file, size_rolling_file
 
-log4j.com.gmh.wzz=DEBUG
-log4j.logger.org.apache=DEBUG
-log4j.logger.freemarker=DEBUG
-log4j.logger.org.logicalcobwebs=DEBUG
-log4j.logger.com.opensymphony=DEBUG
-log4j.logger.org.springframework=DEBUG
-log4j.logger.org.mybatis=DEBUG
-log4j.logger.org.quartz=DEBUG
-log4j.logger.java.sql=debug
-log4j.logger.com.mchange.v2.c3p0=DEBUG
+log4j.com.gmh.wzz=INFO
+log4j.logger.org.apache=INFO
+log4j.logger.freemarker=INFO
+log4j.logger.org.logicalcobwebs=INFO
+log4j.logger.com.opensymphony=INFO
+log4j.logger.org.springframework=INFO
+log4j.logger.org.mybatis=INFO
+log4j.logger.org.quartz=INFO
+log4j.logger.java.sql=INFO
+log4j.logger.com.mchange.v2.c3p0=INFO
 
 # console configuration
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
@@ -20,7 +20,7 @@ log4j.appender.stdout.layout.ConversionPattern=[%d{yyyy-MM-dd HH:mm:ss}] [%p] [%
 
 # Daily File Configuration
 log4j.appender.daily_rolling_log_file=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.daily_rolling_log_file.Threshold=DEBUG
+log4j.appender.daily_rolling_log_file.Threshold=INFO
 log4j.appender.daily_rolling_log_file.File=${apidoc.root}/../logs/apidoc/daily/apidoc.log
 log4j.appender.daily_rolling_log_file.DatePattern = '.'yyyy-MM-dd
 log4j.appender.daily_rolling_log_file.layout=org.apache.log4j.PatternLayout
@@ -28,7 +28,7 @@ log4j.appender.daily_rolling_log_file.layout.ConversionPattern=[%d{yyyy-MM-dd HH
 
 # Rolling File Configuration
 log4j.appender.size_rolling_file=org.apache.log4j.RollingFileAppender
-log4j.appender.size_rolling_file.Threshold=DEBUG
+log4j.appender.size_rolling_file.Threshold=INFO
 log4j.appender.size_rolling_file.File=${apidoc.root}/../logs/apidoc/rolling/apidoc.log
 log4j.appender.size_rolling_file.Append=true
 log4j.appender.size_rolling_file.MaxFileSize=10000KB 
